--- a/P006624.opf/meta.yml
+++ b/P006624.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P006624
+id: P006624
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG20931
   title: བྱམས་ཞུས་ལེའུའི་འཕྲོས་དོན་དང་བཅས་པའི་དཔྱད་ཞིབ།
-  volume: ''
   author: ''
+  volumes: {}
