--- a/P006624.opf/layers/v001/Pagination.yml
+++ b/P006624.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1db5929075594e9889325cca735339ae
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b4f2ff5977c5490ba8e1825bdf23c4f9:
