--- a/P006624.opf/meta.yml
+++ b/P006624.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006624
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:11:11.807363
 source_metadata:
   id: bdr:W1KG20931
   title: བྱམས་ཞུས་ལེའུའི་འཕྲོས་དོན་དང་བཅས་པའི་དཔྱད་ཞིབ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 120
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
